<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/pagamento_orientacao"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_valor_da_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/pagamento_valor_da_compra"
        app:layout_constraintTop_toBottomOf="@id/pagamento_valor_da_compra"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_do_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento_preco_pacote"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pagemento_mes_cartao"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/mes_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/ano_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/pagemento_mes_cartao"
        app:layout_constraintTop_toTopOf="@+id/pagemento_mes_cartao"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pagamento_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagemento_mes_cartao"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/mascara_para_nome_cartao"
        android:hint="@string/nome_no_cartao"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="@id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/pagemento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagemento_mes_cartao"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pagamento_botao_finaliza_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/finalizar_compra"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/pagamento_nome_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_nome_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_nome_cartao" />


</androidx.constraintlayout.widget.ConstraintLayout>