<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/lista_pacotes_banner_inicial"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:contentDescription="@string/conteudo_do_banner_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/primary" />

    <TextView
        android:id="@+id/lista_pacotes_especiais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/especiais"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/lista_pacotes_banner_inicial"
        app:layout_constraintTop_toTopOf="@+id/lista_pacotes_banner_inicial" />

    <TextView
        android:id="@+id/lista_pacotes_pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pais"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/lista_pacotes_especiais"
        app:layout_constraintTop_toBottomOf="@id/lista_pacotes_especiais" />

    <ListView
        android:id="@+id/lista_pacotes_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_banner_inicial"
        tools:listitem="@layout/item_pacote" />
</androidx.constraintlayout.widget.ConstraintLayout>